2020-11-29  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec (Do not emit empty source lines in error
	reporting): Removed as fixed.

2020-11-29  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter (disas): New instruction.
	* libpoke/pkl-insn.def: Define PKL_INSN_DISAS.
	* libpoke/pkl-gen.c (pkl_gen_ps_struct_ref): Fix logic in
	determining is_field_p when there are anonymous fields in a
	struct.
	* testsuite/poke.pkl/sref-func-5.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2020-11-29  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_BUILTIN_STRACE): Define.
	* libpoke/pkl-lex.l: Rule for __PKL_BUILTIN_STRACE__.
	* libpoke/pkl-tab.y: Define BUILTIN_STRACE.
	(builtin): Add rule for the `strace' builtin.
	* libpoke/pkl-rt.pk (strace): Define function.
	* libpoke/pkl-gen.c (PKL_PHASE_BEGIN_HANDLER): Implement body for
	the `strace' builtin.
	* doc/poke.texi (strace): New section.
	* DEV-NEWS: Add entry.

2020-11-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-scrabble.pk: New file.
	* poke/pk-cmd.pk: Load pk-scrabble.pk.
	* poke/Makefile.am (dist_pkgdata_DATA): Add pk-scrabble.pk.
	* doc/poke.texi (scrabble): New section.
	* testsuite/poke.cmd/scrabble-1.pk: New test.
	* testsuite/poke.cmd/scrabble-2.pk: Likewise.
	* testsuite/poke.cmd/scrabble-3.pk: Likewise.
	* testsuite/poke.cmd/scrabble-4.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2020-11-29  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (pkl_make_assertion): do not ignore the result
	of ASTREF.

2020-11-29  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_printer): fix style class handling.
	* testsuite/poke.pkl/printf-value-15.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2020-11-29  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* libpoke/pkl-ast.h (ASTREF): Re-write the macro as inline function
	with `always_inline` and `warn_unused_result` attributes.
	(ASTDEREF): Likewise.