@@ -60,6 +60,7 @@ gnulib_modules="
 
 # gnulib modules used in libpoke/.
 libpoke_modules="
+  byteswap
   dirname
   gettime
   fstat
